<resources>
    <string name="app_name">Podd</string>
    <string name="loading">Loading…</string>
    <string name="podd">Podd</string>
    <string name="discover_london">Discover expertly curated experiences in London</string>
    <string name="serviced_apartment">From the most desirable fine dining Restaurants in London to unique experiences, family outings and taxi bookings, you can now plan and book a range of experiences directly from comfort of your hotel or serviced apartment.</string>
    <string name="stay_london">Enjoy using <b> podd </b> for a memorable stay in London.</string>
    <string name="restraunt">Restaurant</string>
    <string name="taxi">Taxi</string>
    <string name="health"><![CDATA[Health, Fitness & Wellbeing]]></string>
    <string name="happening">Happening in London</string>
    <string name="food"><![CDATA[Food & Drinks]]></string>
    <string name="going_somewhere">Going Somewhere? Book a secure taxi or limousine</string>
    <string name="book_a_taxi">Book a taxi</string>
    <string name="restaraunt_name">RESTAURANT NAME</string>
    <string name="colon">:</string>
    <string name="text_about_restauarnt">Text about restauarnt</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris aliquam dignissim libero condimentum euismod. Aenean aliquam sagittis euismod. Pellentesque sed felis non massa porta efficitur in at turpis. Aliquam ac laoreet neque. Phasellus tincidunt a risus sed pharetra. Vivamus sed viverra lacus.</string>
    <string name="view_menu">View Menu</string>
    <string name="view_in_map">View in Map</string>
    <string name="category">Category</string>
    <string name="price_range">Price range</string>
    <string name="location">Location</string>
    <string name="distance">Distance</string>
    <string name="book_now">BOOK NOW</string>
    <string name="order_now">ORDER NOW</string>
    <string name="book_a_taxi_or_limousine">BOOK A TAXI OR LIMOUSINE</string>
    <string name="leaving_from">Leaving from</string>
    <string name="enter_address_or_postcode">Enter address or postcode</string>
    <string name="going_to">Going to</string>
    <string name="or">OR</string>
    <string name="date">Date</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="select_from_calender">Select from calendar</string>
    <string name="time">Time</string>
    <string name="number_of_people">Number of people</string>
    <string name="additional_requirements">Additional Requirements</string>
    <string name="please_enter_leaving_address">Please enter leaving address or postcode.</string>
    <string name="please_enter_going_address">Please enter going to address or postcode.</string>
    <string name="back">BACK</string>
    <string name="booking_summary">BOOKING SUMMARY</string>
    <string name="additional_information">Additional Information</string>
    <string name="confirmation_text">We will send you a booking confirmation by text or email.</string>
    <string name="name">Name</string>
    <string name="Mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="complete_booking">COMPLETE BOOKING</string>
    <string name="please_enter_name">Please enter name.</string>
    <string name="please_enter_country_code">Please enter country code.</string>
    <string name="please_enter_phone_number">Please enter mobile number.</string>
    <string name="please_enter_email">Please enter email address.</string>
    <string name="please_enter_valid_email">Please enter valid email.</string>
    <string name="confirmation_message">We will shortly sent a confirmation of this booking by text to your mobile and email address</string>
    <string name="thanks_for_using_podd">Thank you for using podd.</string>
    <string name="return_to_home">RETURN TO HOME</string>
    <string name="our_curated_selection_of_best_Restaurants">Our curated selection of best restaurants near you </string>
    <string name="search_by">Search venues by</string>
    <string name="Dietary">Dietary</string>
    <string name="cuisine">Cuisine</string>
    <string name="meal">Meal</string>
    <string name="ambience">Ambience</string>
    <string name="delivered">Delivered to you</string>
    <string name="Booking_summary">Booking Summary</string>
    <string name="date_booked">DATE BOOKED</string>
    <string name="time_booked">TIME BOOKED</string>
    <string name="select_time">Select Time</string>
    <string name="number_of_persons">Number of people</string>
    <string name="date_Booked">Date Booked</string>
    <string name="restaurant_by_cuisine">Search our curated selection of best restaurants by cuisine</string>
    <string name="restaurant_by_dietary">Search our curated selection of best restaurants by dietary</string>
    <string name="restaurant_by_meal">Search our curated selection of best restaurants by meal</string>
    <string name="restaurant_by_ambience">Search our curated selection of best restaurants by ambience</string>
    <string name="restaurant_by_location">Search our curated selection of best restaurants by location</string>
    <string name="delivered_to_you">Delivered to you</string>
    <string name="Please_connect_to_internet_first">Please connect to internet.</string>
    <string name="server_not_responding">Server not responding.</string>
    <string name="data_not_found">Data not found.</string>
    <string name="please_enter_otp_to_confirm_booking">Please enter verification code. This was sent to your mobile.</string>
    <string name="otp">Otp</string>
    <string name="submit">Submit</string>
    <string name="please_enter_otp">Please enter verification code</string>
    <string name="please_enter_valid_otp">Please enter valid verification code.</string>
    <string name="select">Select</string>
    <string name="please_select_a_valid_date">Please select a valid date.</string>
    <string name="please_select_a_valid_time">Please select a valid time.</string>
    <string name="please_select_number_of_people">Please select number of people.</string>
    <string name="please_select_number_of_bag">Please select number of bag.</string>
    <string name="Resend">Resend</string>
    <string name="bars"><![CDATA[Restaurants & Bars]]></string>
    <string name="permission_denied_you_can_not_access_location_data">Permission denied you can not access location data</string>
    <string name="message_added_from_admin">PERSONALIZED MESSAGE ADDED FROM ADMIN</string>
    <string name="personal_concierge">YOUR PERSONAL CONCIERGE</string>
    <string name="image">image</string>
    <string name="location_">Location</string>
    <string name="date_booked_">Date Booked</string>
    <string name="time_booked_">Time Booked</string>
    <string name="number_of_people_">Number of people</string>
    <string name="coming_soon">Coming soon</string>
    <string name="welcome_to">Welcome to</string>
    <string name="explore_and_book_curated_local_experiences">Explore and book curated local experiences</string>
    <string name="showing">Showing </string>
    <string name="venues_by">venues by</string>
    <string name="enter_valid_phone_number">Please enter valid phone number</string>
    <string name="name_must_be_more_than">Name must be more than 2 characters.</string>
    <string name="country_code">Code</string>
    <string name="verification_code">Verification code</string>
    <string name="total">Total:</string>
    <string name="address">Address</string>
    <string name="_0">0</string>
    <string name="the_podd">THE PODD</string>
    <string name="book">BOOK</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="incorrect_verification">Incorrect Verification Code</string>
    <string name="delivery_message">Your order has been sent. The venue will call you shortly on your mobile to process payment</string>
    <string name="booking_request">Booking request has been sent for confirmation</string>
    <string name="by_ticking_this_box_you_agree_to_our_terms_amp_conditions_and_privacy_policy"><![CDATA[By ticking this box you agree to our ]]></string>
    <string name="privacy_policy_error_msg"><![CDATA[Please agree to the Terms & Conditions and Privacy policy.]]></string>
    <string name="info_msg_one"> Instantly discover London in a whole new way at the touch of a button through your complimentary in-room guest tablet.</string>
    <string name="info_msg_two"> We have partnered with some of the leading service providers in London to enable you discover and book a range of exciting experiences.\n\nWe hope to make your stay in London a truly memorable one.\n\nPlease contact us with any comments or feedback at hello@poddapp.com</string>
    <string name="info_msg_three"> In summary, your tablet gives you instant access to:</string>
    <string name="info"> - The best tables at more than 50 Michelin restaurants\n - Casual dining experiences and \'hidden gems\' curated by our expert team\n - Meals delivered straight to your door anytime of the day or night\n - Gift and hampers available from carefully selected partners, available for delivery anywhere in the United Kingdom or worldwide\n - Taxi on demand or in advance from our selected partner (Hailo)\n - Secure airport luggage transfers via Airpotr to any of London\'s major airports as well as instant check-ins through British Airways\n - London\'s best attractions including theatres, museums and art galleries\n - The leading fitness classes, health clubs and spas near you</string>
    <string name="info_link"> We would love to hear from you! Contact us with any questions or feedback at <u>hello@poddapp.com</u></string>
    <string name="info_disclaimer"> Disclaimer: This platform is owned and operated by podd Technologies Limited (podd). We are in no way affiliated with the serviced apartment or hotel where this tablet is installed nor are we in any way affiliated with the service providers listed on this Platform. While we constantly strive to maintain the highest possible standards of service, we do not accept liability or responsibility should any of the services fail to meet your expectations. However, we would welcome your feedback.</string>
    <string name="travel_bag_free_to_any_london_airport">TRAVEL BAG-FREE TO ANY LONDON AIRPORT</string>
    <string name="travel_bag_msg">Free yourself of burdensome baggage and make the most of your last day in London.\n\nAirportr, the premium luggage delivery and storage service will collect your bag from your apartment or hotel and deliver them securely to any London airport at an agreed time, ready for you to collect and check-in.\n\nIndicative price for this option is £20 for the first bag and £10 for each additional bag (any size or weight).</string>
    <string name="bag_check_in_with_british_airways">BAG CHECK-IN WITH BRITISH AIRWAYS</string>
    <string name="bag_check_msg">Airportr has partnered with British Airways to enable you check-in remotely from your apartment.\n\nNot only do you travel bag-free to the airport, you also get to dash straight through security without the hassle of airport check-in.\n\nIndicative price for this option is £30 for the first bag and £10 for each additional bag (British Airways baggage restrictions apply).\n\nPlease proceed below if you would like to receive a quote from Airportr</string>
    <string name="cost">COST</string>
    <string name="cost_msg">Prices dependent on pick up location and departing airport (minimum booking time periods apply) e.g. collection from Central London locations to Heathrow, Gatwick and City cost just £20 for the first bag + £10 each additional bag (any size or weight) NB: AirPortr + Bag Check-In exclusive to British Airways passengers cost £30 for the first bag + £10 each additional bag (as per passenger allowance)</string>
    <string name="airport_luggage_transfers">AIRPORT LUGGAGE TRANSFERS</string>
</resources>