<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context="com.podd.InfoActivity">
    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_5"
        android:textColor="@android:color/white"
        android:text="Info"
        android:padding="@dimen/dp_5"
        android:textSize="@dimen/text_size_12"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
     android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginRight="@dimen/dp_5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvInfoMsgOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:textColor="@android:color/white"
            android:text="@string/info_msg_one"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/text_size_10"/>
        <TextView
            android:id="@+id/tvInfoMsgTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:textColor="@android:color/white"
            android:text="@string/info_msg_two"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/text_size_10"/>
        <TextView
            android:id="@+id/tvInfoMsgThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:textColor="@android:color/white"
            android:visibility="gone"
            android:text="@string/info_msg_three"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/text_size_10"/>
        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:visibility="gone"
            android:textColor="@android:color/white"
            android:text="@string/info"
            android:lineSpacingExtra="@dimen/dp_2"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/text_size_10"/>
        <TextView
            android:id="@+id/tvInfoLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:visibility="gone"
            android:textColor="@android:color/white"
            android:text="@string/info_link"
            android:lineSpacingExtra="@dimen/dp_2"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/text_size_10"/>
        <TextView
            android:id="@+id/tvInfoDisclaimer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_5"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:textColor="@android:color/white"
            android:text="@string/info_disclaimer"
            android:padding="@dimen/dp_5"
            android:textSize="@dimen/text_size_8"/>
    </LinearLayout>

</LinearLayout>
