<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_5"
        android:textColor="@android:color/white"
        android:text="@string/airport_luggage_transfers"
        android:padding="@dimen/dp_5"
        android:textSize="@dimen/text_size_12"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:layout_marginTop="@dimen/dp_5"
        android:background="@android:color/white" />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dp_10"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvRestaurants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:fadingEdge="none"
            android:orientation="horizontal"
            android:scrollbars="none" />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/podd"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_2"
        android:background="@android:color/white" />
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:scrollbars="none">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_20"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvTravelBag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_10"
                android:text="@string/travel_bag_free_to_any_london_airport"
                />
            <TextView
                android:id="@+id/tvTravelBagMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_8"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/travel_bag_msg"
                />
            <TextView
                android:id="@+id/tvBagCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_10"
                android:layout_marginTop="@dimen/dp_15"
                android:text="@string/bag_check_in_with_british_airways"
                />
            <TextView
                android:id="@+id/tvBagCheckMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_8"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/bag_check_msg"
                />

            <TextView
                android:id="@+id/tvCost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_10"
                android:layout_marginTop="@dimen/dp_15"
                android:text="@string/cost"
                />
            <TextView
                android:id="@+id/tvCostMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_8"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/cost_msg"
                />

            <TextView
                android:id="@+id/tvDiscountMsg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_8"
                android:layout_marginTop="@dimen/dp_20"
                android:text="10% discount apples"
                />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <TextView
        android:id="@+id/tvBookNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_4"
        android:background="@drawable/button_background_pink"
        android:gravity="center"
        android:padding="@dimen/dp_8"
        android:text="GET YOUR QUOTE"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_12"
        android:textStyle="bold" />

</LinearLayout>