<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">



    <ImageView
        android:id="@+id/ivPodd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/podd"
        android:layout_gravity="center"
        android:padding="@dimen/dp_5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_5">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRestaurantName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaraunt_name"
                android:textSize="@dimen/text_size_10"
                android:textColor="@android:color/white"
                android:padding="@dimen/dp_2"/>

            <TextView
                android:id="@+id/tvtypeofRestaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dietary"
                android:textSize="@dimen/text_size_10"
                android:textColor="@android:color/white"
                android:padding="@dimen/dp_2"/>
            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="@dimen/text_size_10"
                android:textColor="@android:color/white"
                android:padding="@dimen/dp_2"/>

        </LinearLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/distance"
            android:textSize="@dimen/text_size_10"
            android:gravity="bottom|center"

            android:padding="@dimen/dp_2"
            android:textColor="@android:color/white"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/price_range"
            android:textSize="@dimen/text_size_10"
            android:gravity="bottom|center"
            android:padding="@dimen/dp_2"
            android:textColor="@android:color/white"
            />

    </LinearLayout>

</LinearLayout>